# Freya

./: .gitignore  CMakeLists.txt
example/win/: CMakeLists.txt  main.cpp
libs/win/lib/pkgconfig/: glfw3.pc
src/: CMakeLists.txt  Config.h.in  Freya.cpp  Freya.h  FreyaContext.cpp  FreyaContext.h  FreyaFrameBuffer.cpp  FreyaFrameBuffer.h  FreyaFrameBufferCache.cpp  FreyaFrameBufferCache.h  FreyaImage.cpp  FreyaImage.h  FreyaOutput.cpp  FreyaOutput.h  FreyaProgram.cpp  FreyaProgram.h  glad.c
src/extend/: FreyaQueue.h  FreyaSemaphore.cpp  FreyaSemaphore.h
src/filter/: FreyaFilter.h
src/glad/: glad.h
src/platform/: FreyaPlatform.h
src/utils/: Log.h
windows/: CMakeLists.txt
windows/platform/: Freyalatform.cpp
windows/utils/: Log.cpp
